# airgorah

./: .fpm  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: CI.yml  release.yml
docker/: amd64_builder.Dockerfile  arm64_builder.Dockerfile
docker/amd64_builder/: Dockerfile
docker/arm64_builder/: Dockerfile
docs/: build_from_source.md  installation.md  packaging.md
package/: .desktop  .policy  config.toml  vendors.csv
src/: backend.rs  error.rs  globals.rs  interface.rs  logger.rs  main.rs  types.rs
src/backend/: aireplay.rs  airmon.rs  airodump.rs  app.rs  capture.rs  deauth.rs  decrypt.rs  handshake.rs  interface.rs  mod.rs  scan.rs  settings.rs  tools.rs  vendors.rs
src/frontend/: app.rs  deauth.rs  dialog.rs  header_bar.rs  interface.rs  mod.rs  tools.rs
src/frontend/connections/: app.rs  capture.rs  deauth.rs  decrypt.rs  handshake.rs  header.rs  interface.rs  mod.rs  refresh.rs  scan.rs  settings.rs
src/frontend/interfaces/: app.rs  capture.rs  deauth.rs  decrypt.rs  dialog.rs  interface.rs  mod.rs  settings.rs
src/frontend/widgets/: dialog.rs  icon_button.rs  icon_text_button.rs  mod.rs
src/ui/: dialog.rs  interface.rs  mod.rs  progress.rs  scan.rs
