[package]
name = "airgorah"
version = "0.5.0"
edition = "2021"
license = "MIT"
description = "A WiFi auditing software that can perform deauth attacks and passwords cracking"
authors = ["Martin Olivier <martin.olivier@live.fr>"]
homepage = "https://github.com/martin-olivier/airgorah"
repository = "https://github.com/martin-olivier/airgorah"
documentation = "https://github.com/martin-olivier/airgorah/wiki"
keywords = ["networking", "pentest", "aircrack-ng", "gui", "linux"]
readme = "README.md"
exclude = ["/.github", "/package"]

[dependencies]
gtk4 = { version = "0.7.3", features = ["v4_6"] }
glib = "0.18.3"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
toml = "0.8.1"
csv = "1.2.2"
sudo = "0.6.0"
ctrlc = "3.4.1"
regex = "1.9.5"
lazy_static = "1.4.0"
ureq = { version = "2.7.1", features = ["json"] }
which = "4.4.2"
log = "0.4.20"
env_logger = "0.10.0"
