[package]
name = "airgorah"
version = "0.7.3"
edition = "2021"
license = "MIT"
description = "A WiFi security auditing software mainly based on aircrack-ng tools suite"
authors = ["Martin Olivier <martin.olivier@live.fr>"]
homepage = "https://github.com/martin-olivier/airgorah"
repository = "https://github.com/martin-olivier/airgorah"
documentation = "https://github.com/martin-olivier/airgorah/wiki"
keywords = ["networking", "pentest", "aircrack-ng", "gui", "linux"]
readme = "README.md"
exclude = ["/.github", "/.fpm", "/Dockerfile"]

[dependencies]
gtk4 = { version = "0.8", features = ["v4_6"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
csv = "1.3"
which = "8"
sudo = "0.6"
ctrlc = "3.4"
regex = "1.10"
chrono = "0.4"
lazy_static = "1"
nix = { version = "0.28", features = ["signal"] }
ureq = { version = "2.9", features = ["json"] }
log = "0.4"
env_logger = "0.11"
thiserror = "1"

[build-dependencies]
serde = { version = "1", features = ["derive"] }
csv = "1"
